--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -2,5 +2,5 @@
 #Wed May 24 20:29:44 EDT 2017
 redeployment.enabled=true
 encoding=UTF-8
-domain=default
+domain=interop-domain
 config.resources=interop-scheme-adapter.xml
