--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,6 +1,5 @@
-#** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Wed May 24 20:29:44 EDT 2017
-redeployment.enabled=true
+#Thu May 25 01:28:37 EDT 2017
 encoding=UTF-8
 domain=interop-domain
-config.resources=interop-scheme-adapter.xml
+redeployment.enabled=true
+config.resources=scheme-adapter-api.xml,scheme-adapter-documentation.xml,interop-scheme-adapter.xml,scheme-adapter.xml
