Added more functionality

--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,5 +1,5 @@
-#Thu May 25 01:28:37 EDT 2017
+#Sat May 27 09:48:56 EDT 2017
 encoding=UTF-8
 domain=interop-domain
 redeployment.enabled=true
-config.resources=scheme-adapter-api.xml,scheme-adapter-documentation.xml,interop-scheme-adapter.xml,scheme-adapter.xml
+config.resources=scheme-adapter-api.xml,scheme-adapter-documentation.xml,scheme-adapter.xml
