--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,29 +1,27 @@
-#Interop SPSP properties
-spsp-proxy-service.basePath=/spsp/client/v1
+#Interop Scheme Adapter properties
+proxy-service.host=${proxy-host}
+proxy-service.port=8088
+scheme-adapter-service.basePath=/scheme/adapter/v1
+scheme-adapter-service.consolePath=/scheme/adapter/v1/console
 
-#ILP SPSP Client
-spsp-client-service.host=${ilp-host}
-spsp-client-service.port=3042
-spsp-client-service.basePath=/v1
+
+#ILP Properties
+ilp-service.port=3042
+ilp-service.basePath=/v1
 #Properties used by both ILP SPSP Client and Interop SPSP Client
 paymentsPath=/payments/
-queryPath=/query
 quoteSourceAmountPath=/quoteSourceAmount
-quoteDestinationAmountPath=/quoteDestinationAmount
-setupPath=/setup
 invoicePath=/invoices
 
-#changing default path to enable console for same port
-spspConsolePath=/spsp/client/v1/console/*
+#Metrics Properties
+metrics.reporter.application=interop-scheme-adapter
 
-#metrics related local configuration
-metrics.reporter.application=interop-spsp-clientproxy
+#DFSP Properties
+dfsp-ledger.port=8014
+dfsp-quote-service.port=8010
+dfsp-quote-service.basePath=/v1
 
-#dfsp ledger specific replacements
-ilp-ledger.port=8014
-proxy-service.port=8088
-
-# properties for dfsp-directory-gateway
+# IST Properties
 central-directory.host=${central-dir-host}
 central-directory.port=80
 
@@ -32,4 +30,4 @@ dfsp.account.URL=http://${dfsp-host}:8088/ledger/accounts/bob
 dfsp.account.url.replacement.regex=/ilp/ledger/v1/
 dfsp.account.updated.URL=http://${dfsp-host}:8088/ilp/ledger/v1/accounts/bob
 
-spsp.client.openapi.documentation.url=http://ec2-52-32-130-4.us-west-2.compute.amazonaws.com:${proxy-service.port}${spsp-proxy-service.basePath}/documentation/index.html?url=http://ec2-35-166-189-14.us-west-2.compute.amazonaws.com:${proxy-service.port}${spsp-proxy-service.basePath}/documentation/spsp-client-proxy.yaml
+scheme-adapter.openapi.documentation.url=http://${proxy-host}:${proxy-service.port}${scheme-adapter-service.basePath}/documentation/index.html?url=http://${proxy-host}:${proxy-service.port}${scheme-adapter-service.basePath}/documentation/scheme-adapter.yaml
