--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   	</scm>
 
     <properties>
-		<interop-domain.version>0.1.28</interop-domain.version>
+		<interop-domain.version>0.1.31</interop-domain.version>
     </properties>
 
 	<dependencies>
@@ -35,25 +35,27 @@
 			<groupId>org.glassfish.grizzly</groupId>
 			<artifactId>grizzly-http-servlet</artifactId>
 			<version>2.3.24</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.websocket</groupId>
 			<artifactId>javax.websocket-client-api</artifactId>
 			<version>1.1</version>
-			<scope>test</scope>
+			
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.tyrus</groupId>
 			<artifactId>tyrus-client</artifactId>
 			<version>1.13</version>
-			<scope>test</scope>
+			
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.tyrus</groupId>
 			<artifactId>tyrus-container-grizzly-client</artifactId>
 			<version>1.13</version>
-			<scope>test</scope>
+			
 		</dependency>
+		
 	</dependencies>
 
 </project>
