--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -25,6 +25,10 @@ dfsp-quote-service.basePath=/v1
 central-directory.host=${central-dir-host}
 central-directory.port=80
 
+#SideCar Properties
+sidecar-server.host=192.168.99.100
+sidecar-server.port=5678
+
 dfsp.account.url.original.regex=/ledger/
 dfsp.account.URL=http://${dfsp-host}:8088/ledger/accounts/bob
 dfsp.account.url.replacement.regex=/ilp/ledger/v1/
