--- a/pom.xml
+++ b/pom.xml
@@ -8,21 +8,21 @@
 		<artifactId>interop-parent</artifactId>
 		<version>1.0.14</version>
 	</parent>
-	
+
 	<groupId>com.l1p.interop</groupId>
 	<artifactId>interop-scheme-adapter</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <packaging>mule</packaging>
+	<version>1.0.0-SNAPSHOT</version>
+	<packaging>mule</packaging>
 	<name>Mule interop-scheme-adapter Application</name>
-	
+
 	<scm>
 		<connection>scm:git:https://github.com/LevelOneProject/interop-scheme-adapter</connection>
-	  <tag>HEAD</tag>
-  	</scm>
+		<tag>HEAD</tag>
+	</scm>
 
-    <properties>
+	<properties>
 		<interop-domain.version>0.1.31</interop-domain.version>
-    </properties>
+	</properties>
 
 	<dependencies>
 		<dependency>
@@ -31,7 +31,7 @@
 			<version>${interop-domain.version}</version>
 			<type>zip</type>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.glassfish.grizzly</groupId>
 			<artifactId>grizzly-http-servlet</artifactId>
 			<version>2.3.24</version>
@@ -41,21 +41,41 @@
 			<groupId>javax.websocket</groupId>
 			<artifactId>javax.websocket-client-api</artifactId>
 			<version>1.1</version>
-			
+
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.tyrus</groupId>
 			<artifactId>tyrus-client</artifactId>
 			<version>1.13</version>
-			
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.tyrus</groupId>
 			<artifactId>tyrus-container-grizzly-client</artifactId>
 			<version>1.13</version>
-			
 		</dependency>
-		
+		<dependency>
+			<groupId>com.github.tomakehurst</groupId>
+			<artifactId>wiremock-standalone</artifactId>
+			<version>2.6.0</version>
+		</dependency> 
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>3.0.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-core</artifactId>
+			<version>1.3</version>
+			<scope>compile</scope>
+		</dependency> -->
 	</dependencies>
 
 </project>
