added kafka broker url

--- a/src/test/resources/config-test.properties
+++ b/src/test/resources/config-test.properties
@@ -14,6 +14,7 @@ sidecar-server.host=192.168.99.100
 sidecar-server.port=5678
 
 #metrics
+metrics.reporter.kafka.broker=ec2-35-164-199-6.us-west-2.compute.amazonaws.com:9092
 metrics.reporter.environment=qa-dfsp1
 metrics.reporter.kafka.topic=bmgf.metric.pi2
 metrics.reporter.kafka.clientID=interop-dfsp1
