--- a/mule_artifacts/mule-l1p.properties
+++ b/mule_artifacts/mule-l1p.properties
@@ -1,6 +1,8 @@
 dfsp-host=localhost
-ilp-host=ec2-52-32-130-4.us-west-2.compute.amazonaws.com
+ilp-host=ec2-35-166-236-69.us-west-2.compute.amazonaws.com
 proxy-host=localhost
 central-dir-host=central-directory-214462011.us-west-2.elb.amazonaws.com
 central-user-registration-host=central-end-user-registry-1833170602.us-west-2.elb.amazonaws.com
 environment=dfsp1-test
+metrics.reporter.environment=pdp-sandbox
+metrics.reporter.kafka.broker=ec2-35-164-199-6.us-west-2.compute.amazonaws.com:9092
