added quote endpoint

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -19,6 +19,11 @@ metrics.reporter.application=interop-scheme-adapter
 dfsp-ledger.port=8014
 dfsp-quote-service.port=8010
 dfsp-quote-service.basePath=/v1
+dfsp-receiver-service.port=8010
+dfsp-receiver-service.basePath=
+
+# DFSP credentials username=dfsp1-test, password=dfsp1-test
+dfsp-receiver-service.auth_value=ZGZzcDEtdGVzdDpkZnNwMS10ZXN0
 
 # IST Properties
 central-directory.host=${central-dir-host}
