removed code that is not needed

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -21,9 +21,7 @@ dfsp-quote-service.port=8010
 dfsp-quote-service.basePath=/v1
 dfsp-receiver-service.port=8010
 dfsp-receiver-service.basePath=
-
-# DFSP credentials username=dfsp1-test, password=dfsp1-test
-dfsp-receiver-service.auth_value=ZGZzcDEtdGVzdDpkZnNwMS10ZXN0
+dfsp-receiver-service.auth_value=#[ Base64.getEncoder().encodeToString("${environment}:${environment}".getBytes("utf-8")) ]
 
 # IST Properties
 central-directory.host=${central-dir-host}
@@ -33,9 +31,5 @@ central-directory.port=80
 sidecar-server.host=192.168.99.100
 sidecar-server.port=5678
 
-dfsp.account.url.original.regex=/ledger/
-dfsp.account.URL=http://${dfsp-host}:8088/ledger/accounts/bob
-dfsp.account.url.replacement.regex=/ilp/ledger/v1/
-dfsp.account.updated.URL=http://${dfsp-host}:8088/ilp/ledger/v1/accounts/bob
 
 scheme-adapter.openapi.documentation.url=http://${proxy-host}:${proxy-service.port}${scheme-adapter-service.basePath}/documentation/index.html?url=http://${proxy-host}:${proxy-service.port}${scheme-adapter-service.basePath}/documentation/scheme-adapter.yaml
