updates for junits

--- a/src/test/resources/config-test.properties
+++ b/src/test/resources/config-test.properties
@@ -1,5 +1,7 @@
 # properties from domain for testing purpose
-proxy-service.host=0.0.0.0
+proxy-host=localhost
+mapping-proxy-host=localhost
+proxy-service.host=localhost
 proxy-service.port=8088
 
 #ILP Properties
@@ -7,6 +9,7 @@ ilp-host=localhost
 
 #DFSP Properties
 dfsp-host=localhost
+mapping-dfsp-host=localhost
 
 # IST Properties
 central-directory.host=0.0.0.0.0
