--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -17,10 +17,7 @@ metrics.reporter.application=interop-scheme-adapter
 
 #DFSP Properties
 dfsp-ledger.port=8014
-dfsp-quote-service.port=8020
-dfsp-quote-service.basePath=/v1
-dfsp-receiver-service.port=8010
-dfsp-receiver-service.basePath=
+dfsp-api.port=8010
 dfsp-receiver-service.auth_value=#[ Base64.getEncoder().encodeToString("${environment}:${environment}".getBytes("utf-8")) ]
 
 # IST Properties
