Added authorization while calling dfsp-api /quotes

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -18,7 +18,7 @@ metrics.reporter.application=interop-scheme-adapter
 #DFSP Properties
 dfsp-ledger.port=8014
 dfsp-api.port=8010
-dfsp-receiver-service.auth_value=#[ Base64.getEncoder().encodeToString("${environment}:${environment}".getBytes("utf-8")) ]
+dfsp-api.auth_value=#[ Base64.getEncoder().encodeToString("${environment}:${environment}".getBytes("utf-8")) ]
 
 # IST Properties
 central-directory.host=${central-dir-host}
