--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
@@ -21,7 +21,8 @@
 
 	<properties>
 		<interop-domain.version>0.1.32</interop-domain.version>
-	</properties>
+	<mule.version>3.8.0</mule.version>
+    </properties>
 
 	<dependencies>
 		<dependency>
@@ -78,6 +79,14 @@
 			<version>1.3</version>
 			<scope>test</scope>
 		</dependency> 
+		
+		<dependency>
+            <groupId>org.interledger</groupId>
+            <artifactId>java-ilp-core</artifactId>
+            <version>0.5.0-SNAPSHOT</version>
+        </dependency>
+		
+		
 	</dependencies>
 
 </project>
