--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
 			<version>${interop-domain.version}</version>
 			<type>zip</type>
 		</dependency>
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>3.0.1</version>
+		</dependency>
 	</dependencies>
 
 </project>
