--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,10 @@
 			<type>zip</type>
 		</dependency>
 		<dependency>
-			<groupId>io.rest-assured</groupId>
-			<artifactId>rest-assured</artifactId>
-			<version>3.0.1</version>
-		</dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.4.0</version>
+        </dependency>
 	</dependencies>
 
 </project>
